unpackaged/main/default/objects/Engineer_Application__c/Engineer_Application__c.object-meta.xml
<CustomObject>
    <label>Engineer Application</label>
    <nameField>
        <displayFormat>EA-{000000}</displayFormat>
        <label>Engineer Application</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engineer Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>