unpackaged/main/default/objects/Engineer_Application__c/fields/Address_History__c.field-meta.xml
<CustomField>
    <fullName>Address_History__c</fullName>
    <description>Populates by Applicant on Onboarding Community (&#39;Document Upload&#39; tab).</description>
    <label>Address History</label>
    <type>TextArea</type>
</CustomField>