unpackaged/main/default/objects/Engineer_Application__c/fields/Allocated_Manager_Field__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Manager_Field__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Allocated Manager (Field)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Engineer_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>