unpackaged/main/default/objects/Engineer_Application__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <label>Application Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Applicant</fullName>
                <default>true</default>
                <label>New Applicant</label>
            </value>
            <value>
                <fullName>Telephone_Screen_ -_ Dry</fullName>
                <label>Telephone Screen - Dry</label>
            </value>
            <value>
                <fullName>Trial Offered</fullName>
            </value>
            <value>
                <fullName>Trial Booked</fullName>
            </value>
            <value>
                <fullName>Trial Missed</fullName>
            </value>
            <value>
                <fullName>Onboarding_Offered</fullName>
                <label>Onboarding Offered</label>
            </value>
            <value>
                <fullName>Onboarding Booked</fullName>
            </value>
            <value>
                <fullName>Onboarding Missed</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Rejected Us</fullName>
            </value>
            <value>
                <fullName>Unsuitable</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Hired</fullName>
            </value>
            <value>
                <fullName>Dry Interview Booked</fullName>
                <isActive>false</isActive>
                <label>Dry Interview Booked</label>
            </value>
            <value>
                <fullName>Dry On Trial</fullName>
                <isActive>false</isActive>
                <label>Dry On Trial</label>
            </value>
            <value>
                <fullName>Interview</fullName>
                <isActive>false</isActive>
                <label>Interview</label>
            </value>
            <value>
                <fullName>Interview - Dry</fullName>
                <isActive>false</isActive>
                <label>Interview - Dry</label>
            </value>
            <value>
                <fullName>Interview - Wet</fullName>
                <isActive>false</isActive>
                <label>Interview - Wet</label>
            </value>
            <value>
                <fullName>Interview Booked</fullName>
                <isActive>false</isActive>
                <label>Interview Booked</label>
            </value>
            <value>
                <fullName>Interview Missed - Dry</fullName>
                <isActive>false</isActive>
                <label>Interview Missed - Dry</label>
            </value>
            <value>
                <fullName>Interview Missed - Wet</fullName>
                <isActive>false</isActive>
                <label>Interview Missed - Wet</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>Telephone_Screen_ -_ Wet</fullName>
                <isActive>false</isActive>
                <label>Telephone Screen - Wet</label>
            </value>
            <value>
                <fullName>Wet Interview Booked</fullName>
                <isActive>false</isActive>
                <label>Wet Interview Booked</label>
            </value>
            <value>
                <fullName>Wet On Trial</fullName>
                <isActive>false</isActive>
                <label>Wet On Trial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>