unpackaged/main/default/objects/Engineer_Application__c/fields/Aspect_Email__c.field-meta.xml
<CustomField>
    <fullName>Aspect_Email__c</fullName>
    <label>Aspect Email</label>
    <type>Email</type>
</CustomField>