unpackaged/main/default/objects/Engineer_Application__c/fields/Aspect_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Aspect_Phone_Number__c</fullName>
    <label>Aspect Phone Number</label>
    <type>Phone</type>
</CustomField>