unpackaged/main/default/objects/Engineer_Application__c/fields/Do_you_have_a_valid_UK_Drivers_License__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_a_valid_UK_Drivers_License__c</fullName>
    <label>Do you have a valid UK Driver’s License?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>