unpackaged/main/default/objects/Engineer_Application__c/fields/Do_you_have_any_criminal_records__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_any_criminal_records__c</fullName>
    <label>Do you have any criminal records?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>