unpackaged/main/default/objects/Engineer_Application__c/fields/DocuSign_Contract_completed__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Contract_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A custom field which is updated by DocuSign eSignature App when an envelope with an Engineer Contract is completed.</description>
    <label>DocuSign Contract completed</label>
    <type>Checkbox</type>
</CustomField>