unpackaged/main/default/objects/Engineer_Application__c/fields/Dry_Trade__c.field-meta.xml
<CustomField>
    <fullName>Dry_Trade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dry Trade</label>
    <type>Checkbox</type>
</CustomField>