unpackaged/main/default/objects/Engineer_Application__c/fields/Engineer_Community_User__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Community_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Engineer Community User.</description>
    <label>Engineer Community User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Engineer_Applications3</relationshipName>
    <type>Lookup</type>
</CustomField>