unpackaged/main/default/objects/Engineer_Application__c/fields/HeadshotSelfie__c.field-meta.xml
<CustomField>
    <fullName>HeadshotSelfie__c</fullName>
    <label>Headshot/Selfie</label>
    <type>Url</type>
</CustomField>