unpackaged/main/default/objects/Engineer_Application__c/fields/Interview_Attended__c.field-meta.xml
<CustomField>
    <fullName>Interview_Attended__c</fullName>
    <label>Interview Attended?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>