unpackaged/main/default/objects/Engineer_Application__c/fields/Licence_Check_Code__c.field-meta.xml
<CustomField>
    <fullName>Licence_Check_Code__c</fullName>
    <description>Populates by Applicant on Onboarding Community (&#39;Document Upload&#39; tab).</description>
    <label>Licence Check Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>