unpackaged/main/default/objects/Engineer_Application__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>A Custom field, used for DocuSign Recipient information. Please don&#39;t delete (not placed on the EA layout).</description>
    <formula>First_Name__c &amp; &quot; &quot; &amp; Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>