unpackaged/main/default/objects/Engineer_Application__c/fields/National_Insurance__c.field-meta.xml
<CustomField>
    <fullName>National_Insurance__c</fullName>
    <description>This is to record the NI number for all of the new applicants</description>
    <label>National Insurance</label>
    <length>10</length>
    <type>Text</type>
</CustomField>