unpackaged/main/default/objects/Engineer_Application__c/fields/Please_provide_details_of_the_conviction__c.field-meta.xml
<CustomField>
    <fullName>Please_provide_details_of_the_conviction__c</fullName>
    <label>Please provide details of the conviction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>