unpackaged/main/default/objects/Engineer_Application__c/fields/Qualifications__c.field-meta.xml
<CustomField>
    <fullName>Qualifications__c</fullName>
    <label>Qualifications</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>