unpackaged/main/default/objects/Engineer_Application__c/fields/RelatedUserId__c.field-meta.xml
<CustomField>
    <fullName>RelatedUserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Onboarding Community User.</description>
    <label>Onboarding Community User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Engineer_Applications2</relationshipName>
    <type>Lookup</type>
</CustomField>