unpackaged/main/default/objects/Engineer_Application__c/fields/Residential_Address__c.field-meta.xml
<CustomField>
    <fullName>Residential_Address__c</fullName>
    <label>Residential Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>