unpackaged/main/default/objects/Engineer_Application__c/fields/Secondary_Trade__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Trade__c</fullName>
    <label>Secondary Trade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access</fullName>
            </value>
            <value>
                <fullName>Brickwork &amp; Paving</fullName>
            </value>
            <value>
                <fullName>Carpentry</fullName>
            </value>
            <value>
                <fullName>Drainage</fullName>
            </value>
            <value>
                <fullName>Drainage Survey</fullName>
            </value>
            <value>
                <fullName>Drains &amp; Blockages (Soil Water)</fullName>
            </value>
            <value>
                <fullName>Drains &amp; Blockages (Waste Water)</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Electrical Testing</fullName>
            </value>
            <value>
                <fullName>Fencing, Decking &amp; Cladding</fullName>
            </value>
            <value>
                <fullName>Gardening</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Gas Commercial</fullName>
            </value>
            <value>
                <fullName>Glazing</fullName>
            </value>
            <value>
                <fullName>Heating, Ventilation, &amp; Air Conditioning</fullName>
            </value>
            <value>
                <fullName>Leak Detection - Drainage</fullName>
            </value>
            <value>
                <fullName>Leak Detection - Heating/Hot Water</fullName>
            </value>
            <value>
                <fullName>Leak Detection - Multi</fullName>
            </value>
            <value>
                <fullName>Leak Detection - Plumbing</fullName>
            </value>
            <value>
                <fullName>Leak Detection - Roofing</fullName>
            </value>
            <value>
                <fullName>Locksmith</fullName>
            </value>
            <value>
                <fullName>Multi Skilled</fullName>
            </value>
            <value>
                <fullName>Painting &amp; Decorating</fullName>
            </value>
            <value>
                <fullName>Pest Control</fullName>
            </value>
            <value>
                <fullName>Plastering</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Roofing</fullName>
            </value>
            <value>
                <fullName>Tiling</fullName>
            </value>
            <value>
                <fullName>Ventilation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>