unpackaged/main/default/objects/Engineer_Application__c/fields/Service_Resource_Trial__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource_Trial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Resource Trial</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Engineer_Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>