unpackaged/main/default/objects/Engineer_Application__c/fields/Shift_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Shift_Pattern__c</fullName>
    <label>Shift Pattern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Call</fullName>
            </value>
            <value>
                <fullName>Shift 1</fullName>
            </value>
            <value>
                <fullName>Shift 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>