unpackaged/main/default/objects/Engineer_Application__c/fields/Successful_Interview__c.field-meta.xml
<CustomField>
    <fullName>Successful_Interview__c</fullName>
    <label>Successful Interview?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>