unpackaged/main/default/objects/Engineer_Application__c/fields/Tax_Company__c.field-meta.xml
<CustomField>
    <fullName>Tax_Company__c</fullName>
    <description>Please Choose one from the List</description>
    <label>Tax Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crystal Tax</fullName>
            </value>
            <value>
                <fullName>In-Sync</fullName>
            </value>
            <value>
                <fullName>PAYE</fullName>
            </value>
            <value>
                <fullName>Subcontractor Weekly Invoicing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>