unpackaged/main/default/objects/Engineer_Application__c/fields/Tier_of_Pay__c.field-meta.xml
<CustomField>
    <fullName>Tier_of_Pay__c</fullName>
    <label>Tier of Pay</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 4</fullName>
            </value>
            <value>
                <fullName>Tier 6</fullName>
            </value>
            <value>
                <fullName>Tier 8</fullName>
            </value>
            <value>
                <fullName>Tier 10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>