unpackaged/main/default/objects/Engineer_Application__c/fields/Trial_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Trial_Engineer__c</fullName>
    <label>Trial Engineer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>