unpackaged/main/default/objects/Engineer_Application__c/fields/Trial_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Trial_Feedback__c</fullName>
    <label>Trial Feedback</label>
    <length>254</length>
    <type>Text</type>
</CustomField>