unpackaged/main/default/objects/Engineer_Application__c/fields/Trial_Successful__c.field-meta.xml
<CustomField>
    <fullName>Trial_Successful__c</fullName>
    <label>Trial Successful?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>