unpackaged/main/default/objects/Engineer_Application__c/fields/Upload_photos_of_your_workmanship__c.field-meta.xml
<CustomField>
    <fullName>Upload_photos_of_your_workmanship__c</fullName>
    <label>Upload photos of your workmanship</label>
    <type>Url</type>
</CustomField>