unpackaged/main/default/objects/Engineer_Application__c/fields/Wet_Trade__c.field-meta.xml
<CustomField>
    <fullName>Wet_Trade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wet Trade</label>
    <type>Checkbox</type>
</CustomField>