unpackaged/main/default/objects/Engineer_Application__c/fields/When_did_you_attain_this_conviction__c.field-meta.xml
<CustomField>
    <fullName>When_did_you_attain_this_conviction__c</fullName>
    <label>When did you attain this conviction?</label>
    <type>Date</type>
</CustomField>