unpackaged/main/default/objects/Engineer_Application__c/fields/Years_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Experience__c</fullName>
    <label>Years of Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Up to 3 years</fullName>
            </value>
            <value>
                <fullName>3-5 years</fullName>
            </value>
            <value>
                <fullName>5-7 years</fullName>
            </value>
            <value>
                <fullName>7+ years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>