unpackaged/main/default/objects/Engineer_Application__c/fields/Your_CV__c.field-meta.xml
<CustomField>
    <fullName>Your_CV__c</fullName>
    <label>Your CV</label>
    <type>Url</type>
</CustomField>