unpackaged/main/default/objects/Engineer_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Application_Status__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Contact_Number__c</columns>
    <columns>DocuSign_Contract_completed__c</columns>
    <columns>Residential_Postcode__c</columns>
    <columns>Interview_Date__c</columns>
    <columns>Trial_Date__c</columns>
    <columns>Your_CV__c</columns>
    <columns>Primary_Trade__c</columns>
    <columns>Secondary_Trade__c</columns>
    <columns>Dry_Trade__c</columns>
    <columns>Wet_Trade__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>